# GameNest

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.zh-CN.md  RELEASE-v1.1.0.md  RELEASE-v1.2.0.md  RELEASE-v1.3.0.md  SECURITY.md  desktop-entry.js  findings.md  main.js  package-lock.json  package.json  progress.md  server.js  start.bat  start.vbs  startup-port.js  task_plan.md  task_plan_v1.3.0.md
.claude/: launch.json  settings.local.json
.playwright-mcp/: page-2026-06-01T12-07-30-897Z.yml  page-2026-06-01T12-07-38-123Z.yml  page-2026-06-01T12-17-19-010Z.yml
android/: .gitignore  SETUP.md  copy-nodejs-project.ps1  gradlew  settings.gradle
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
bots/: backgammon.js  battleship.js  bigtwo.js  checkers.js  chess.js  chinesechess.js  connect4.js  davinci.js  doudizhu.js  exploding-kittens.js  flightchess.js  go9.js  gomoku.js  hearts.js  liarsbar.js  monopoly.js  numberbomb.js  oldmaid.js  reversi.js  rummikub.js  sheeptile.js  snakebattle.js  suikabattle.js  texas.js  tictactoe.js  twentyfour.js  uno.js
docs/: ARCHITECTURE.md  STORE_LISTING.md
games/: backgammon.js  battleship.js  bigtwo.js  checkers.js  chess.js  chinesechess.js  connect4.js  davinci.js  doudizhu.js  drawguess-words.js  drawguess.js  exploding-kittens.js  flightchess.js  go9.js  gomoku.js  hearts.js  liarsbar.js  minesweeper.js  monopoly.js  numberbomb.js  oldmaid.js  reversi.js  rummikub.js  sheeptile.js  snakebattle.js  suikabattle.js  texas.js  tictactoe.js  truthdare.js  twentyfour.js  uno.js
(+125 files in other folders)
